Added prebuild explanation to README.md, added more engine version support notes, removed Areas for Improvement section in favor of GitHub issues, tested/fixed Prebuild.sh on Mac.

--- a/VersionMacros.uplugin
+++ b/VersionMacros.uplugin
@@ -21,30 +21,30 @@
 	],
 	"PreBuildSteps": {
 		"Linux": [
-			"export RootDir=$(RootDir)",
-			"export EngineDir=$(EngineDir)",
-			"export ProjectDir=$(ProjectDir)",
-			"export TargetName=$(TargetName)",
-			"export TargetPlatform=$(TargetPlatform)",
-			"export TargetConfiguration=$(TargetConfiguration)",
-			"export TargetType=$(TargetType)",
-			"export ProjectFile=$(ProjectFile)",
-			"export PluginDir=$(PluginDir)",
-			"pushd $(PluginDir)",
+			"export RootDir=\"$(RootDir)\"",
+			"export EngineDir=\"$(EngineDir)\"",
+			"export ProjectDir=\"$(ProjectDir)\"",
+			"export TargetName=\"$(TargetName)\"",
+			"export TargetPlatform=\"$(TargetPlatform)\"",
+			"export TargetConfiguration=\"$(TargetConfiguration)\"",
+			"export TargetType=\"$(TargetType)\"",
+			"export ProjectFile=\"$(ProjectFile)\"",
+			"export PluginDir=\"$(PluginDir)\"",
+			"pushd \"$(PluginDir)\"",
 			". ./Resources/BuildScripts/Linux/Prebuild.sh",
 			"popd"
 		],
 		"Mac": [
-			"export RootDir=$(RootDir)",
-			"export EngineDir=$(EngineDir)",
-			"export ProjectDir=$(ProjectDir)",
-			"export TargetName=$(TargetName)",
-			"export TargetPlatform=$(TargetPlatform)",
-			"export TargetConfiguration=$(TargetConfiguration)",
-			"export TargetType=$(TargetType)",
-			"export ProjectFile=$(ProjectFile)",
-			"export PluginDir=$(PluginDir)",
-			"pushd $(PluginDir)",
+			"export RootDir=\"$(RootDir)\"",
+			"export EngineDir=\"$(EngineDir)\"",
+			"export ProjectDir=\"$(ProjectDir)\"",
+			"export TargetName=\"$(TargetName)\"",
+			"export TargetPlatform=\"$(TargetPlatform)\"",
+			"export TargetConfiguration=\"$(TargetConfiguration)\"",
+			"export TargetType=\"$(TargetType)\"",
+			"export ProjectFile=\"$(ProjectFile)\"",
+			"export PluginDir=\"$(PluginDir)\"",
+			"pushd \"$(PluginDir)\"",
 			". ./Resources/BuildScripts/Mac/Prebuild.sh",
 			"popd"
 		],
@@ -58,7 +58,7 @@
 			"set TargetType=$(TargetType)",
 			"set ProjectFile=$(ProjectFile)",
 			"set PluginDir=$(PluginDir)",
-			"pushd $(PluginDir)",
+			"pushd \"$(PluginDir)\"",
 			"%SYSTEMROOT%/System32/WindowsPowerShell/v1.0/powershell.exe ./Resources/BuildScripts/Win64/Prebuild.ps1",
 			"popd"
 		]
